crates/toml_edit/fixtures/invalid/control/multi-del.stderr
TOML parse error at line 1, column 20
  |
1 | multi-del = """null"""
  |                    ^
Invalid multiline basic string
